--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -35,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "css": "^3.0.0",
+    "post": "^0.0.1",
+    "tailwind": "^4.0.0"
   }
 }
