--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,11 +13,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://saathveek-gowrishankar.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "css": "^3.0.0",
+    "gh-pages": "^6.3.0",
     "post": "^0.0.1",
     "tailwind": "^4.0.0"
   }
