Added Footer; Adjusted Skills layout
Added auto version update/display

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -17,7 +17,8 @@
   "homepage": "https://saathveek.com",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "sync-version": "node scripts/updateVersion.js",
+    "build": "npm run sync-version && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
